--- a/garden/highlights/books/Digital Minimalism.mdx
+++ b/garden/highlights/books/Digital Minimalism.mdx
@@ -4,7 +4,8 @@ medium: books
 author: Cal Newport
 reviewed: false
 draft: false
-cover: https://images-na.ssl-images-amazon.com/images/I/51JIFuURUZL._SL200_.jpg
+cover_url: https://images-na.ssl-images-amazon.com/images/I/51JIFuURUZL._SL200_.jpg
+title: Digital Minimalism
 ---
 # Digital Minimalism
 
