Adding more content and a lot of styling

--- a/garden/notes/Should I Get a 3D Printer.mdx
+++ b/garden/notes/Should I Get a 3D Printer.mdx
@@ -1,6 +1,6 @@
 ---
 planted: 2024-10-12
-status: budding
+stage: budding
 draft: false
 tags: making
 modified: 2024-10-14T17:22:11-07:00
@@ -47,4 +47,3 @@ Writing this also clarified my brewing hobby, and I think I'm ready to part with
 
 ---
 [[content/index|Back to Home]]
-
