--- a/garden/notes/Becoming a Maker for My Son (and for Me).mdx
+++ b/garden/notes/Becoming a Maker for My Son (and for Me).mdx
@@ -3,9 +3,11 @@ planted: 2024-10-11
 stage: evergreen
 draft: false
 tags: making
-title: testo
+title: Becoming a Maker for My Son (and For Me) 
 modified: 2024-10-14T17:45:55-07:00
 ---
+# Becoming a Maker for My Son (and For Me)
+
 Every day, I watch my son grow into a more nuanced individual. He’s constantly looking at me to help him define himself. Each mimicry or parody he presents back to me brings me great joy and a sense of responsibility. My role makes me the prototype and whenever I think about that I feel an undeniable urge to create an idealized version of myself—someone he can look up to, someone he can use as a template.
 
 Yet, that urge is complicated. On the one hand, striving to be a better version of myself for him is the most powerful motivation I've ever felt. It pushes me to confront parts of my life I’ve neglected or let slide—how I treat my body, my habits, and my responsibilities around the house. However, it's easy to fall into the trap of thinking I need to be perfect, which is an unattainable ideal that could lead to frustration or a sense of failure. It's possible that by trying too hard, I could push him away from the very things I want him to value.
